[tool.poetry]
name = "geofeeds"
version = "0.1.0"
description = "Generator of turtlebit geofeeds"
authors = ["Michael Vieira <dev@mvieira.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.11.3"
flake8 = "^6.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
