[tool.poetry]
name = "geofeeds"
version = "0.1.0"
description = "Generator of turtlebit geofeeds"
authors = ["Michael Vieira <dev@mvieira.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"


[tool.poetry.scripts]
geofeeds = "geofeeds.generate_geofeeds:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
